--- a/src/Interprocess/Interprocess.csproj
+++ b/src/Interprocess/Interprocess.csproj
@@ -20,7 +20,15 @@
     <PackageTags>interprocess;interprocess-communication;ipc;shared-memory-communication;shared-memory-queue;shared-memory;memory-mapped-file;queue;cross-process-communication;cross-process</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <VersionSuffix Condition=" '$(VersionSuffix)'=='' ">0</VersionSuffix>
-    <Version>1.0.$(VersionSuffix)</Version>
+    <Version>1.0.156</Version>
+    <AssemblyVersion>1.0.156.1</AssemblyVersion>
+    <FileVersion>1.0.156.1</FileVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Cloudtoid.Interprocess.1.0.156.nupkg" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Threading.AccessControl" Version="5.0.0" />
+  </ItemGroup>
 
 </Project>
